@@ -1,11 +1,11 @@
-FROM gradle:6.3.0-jdk8 AS build
+FROM gradle:6.9.0-jdk11 AS build
 ENV DOCKER_ENV=dev
 COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
 RUN gradle clean build --no-daemon
 
-FROM openjdk:8-jre-slim
+FROM eclipse-temurin:11-jre
 RUN mkdir /app
 COPY --from=build /home/gradle/src/build/libs/*.jar /apps/OpsERA/components/certificate-generator/certificate-generator.jar
 EXPOSE 8055
-ENTRYPOINT java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dspring.profiles.active=$DOCKER_ENV $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /apps/OpsERA/components/certificate-generator/certificate-generator.jar
+ENTRYPOINT exec /tini -- java -XX:+UseContainerSupport -XX:MaxRAMPercentage=80.0 -Dspring.profiles.active=$DOCKER_ENV -Djava.security.egd=file:/dev/./urandom -jar /apps/OpsERA/components/certificate-generator/certificate-generator.jar
